Add checkout router/controller
