# server/api/controllers/checkout/checkout.router.js
@@ -1,0 +1,6 @@
+import * as express from 'express';
+import checkoutController from './checkout.controller';
+
+export default express
+    .Router()
+    .post('/', checkoutController.checkoutCart)
